data/contextbench_phase1/stripped/raw_transcripts/000128_6a33f5c4.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 3 USER]
PRIOR ISSUE METADATA
repo: sympy/sympy
instance_id: sympy__sympy-13177
base_commit: 662cfb818e865f580e18b59efbb3540c34232beb
problem_statement:
Mod(x**2, x) is not (always) 0
When the base is not an integer, `x**2 % x` is not 0. The base is not tested to be an integer in Mod's eval logic:

```
if (p == q or p == -q or
        p.is_Pow and p.exp.is_Integer and p.base == q or
        p.is_integer and q == 1):
    return S.Zero
```

so

```
>>> Mod(x**2, x)
0
```
but
```
>>> x = S(1.5)
>>> Mod(x**2, x)
0.75
```
[RAW line 9 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "pattern": "class Mod\\(",
  "type": "py"
}
[RAW line 10 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "pattern": "p\\.is_Pow and p\\.exp\\.is_Integer and p\\.base == q",
  "type": "py"
}
[RAW line 14 TOOL Bash]
find . -name "*.py" -type f | head -20
[RAW line 15 TOOL RESULT toolu_01Y54i2e2Zjo7p5GxhMEHJvb]
./calculate_session_usage.py
[RAW line 23 TOOL Bash]
ls -la testbed 2>&1 | head -20
[RAW line 34 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "path": "testbed",
  "pattern": "p\\.is_Pow and p\\.exp\\.is_Integer and p\\.base == q",
  "type": "py"
}
[RAW line 35 TOOL RESULT toolu_01QiEQLFCuEcZQJ1q9pMyZJd]
Found 1 file
testbed/sympy/core/mod.py
[RAW line 38 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/sympy/core/mod.py"
}
[RAW line 39 TOOL RESULT toolu_015DckJpD4Mboipr5uGioYG8]
     1→from __future__ import print_function, division
     2→
     3→from sympy.core.numbers import nan
     4→from .function import Function
     5→
     6→
     7→class Mod(Function):
     8→    """Represents a modulo operation on symbolic expressions.
     9→
    10→    Receives two arguments, dividend p and divisor q.
    11→
    12→    The convention used is the same as Python's: the remainder always has the
    13→    same sign as the divisor.
    14→
    15→    Examples
    16→    ========
    17→
    18→    >>> from sympy.abc import x, y
    19→    >>> x**2 % y
    20→    Mod(x**2, y)
    21→    >>> _.subs({x: 5, y: 6})
    22→    1
    23→
    24→    """
    25→
    26→    @classmethod
    27→    def eval(cls, p, q):
    28→        from sympy.core.add import Add
    29→        from sympy.core.mul import Mul
    30→        from sympy.core.singleton import S
    31→        from sympy.core.exprtools import gcd_terms
    32→        from sympy.polys.polytools import gcd
    33→
    34→        def doit(p, q):
    35→            """Try to return p % q if both are numbers or +/-p is known
    36→            to be less than or equal q.
    37→            """
    38→
    39→            if p.is_infinite or q.is_infinite or p is nan or q is nan:
    40→                return nan
    41→            if (p == q or p == -q or
    42→                    p.is_Pow and p.exp.is_Integer and p.base == q or
    43→                    p.is_integer and q == 1):
    44→                return S.Zero
    45→
    46→            if q.is_Number:
    47→                if p.is_Number:
    48→                    return (p % q)
    49→                if q == 2:
    50→                    if p.is_even:
    51→                        return S.Zero
    52→                    elif p.is_odd:
    53→                        return S.One
    54→
    55→            # by ratio
    56→            r = p/q
    57→            try:
    58→                d = int(r)
    59→            except TypeError:

[... truncated ...]
[RAW line 46 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/sympy/core/mod.py",
  "new_text_sha256": "281a030d50f8f72d74090c6ddaf952a12a92bd45b268f90cd28cdc35cc5ef22b",
  "old_text_sha256": "e545275bdaa1da4b17451988f7f31aae2e8c422bdff17cbe0bc9410e4b8aef1a"
}
[RAW line 58 TOOL Bash]
cd testbed && python test_issue.py
[RAW line 59 TOOL RESULT toolu_01WGXpPXp8TQtvA3s5fmLiLV]
Exit code 1
  File "test_issue.py", line 12
    print(f"Mod(x**2, x) = {result}")
                                   ^
SyntaxError: invalid syntax
[RAW line 61 TOOL Bash]
cd testbed && python --version
[RAW line 62 TOOL RESULT toolu_017VCPPgubqwHTevVZ2TJ2ZN]
Python 2.7.3
[RAW line 67 TOOL Bash]
cd testbed && python test_issue.py
[RAW line 70 TOOL Bash]
python test_issue.py
[RAW line 71 TOOL RESULT toolu_01B3v6cVarEmZSqh22YHUzoY]
Exit code 1
Traceback (most recent call last):
  File "test_issue.py", line 5, in <module>
    from sympy import Mod, Symbol, S
  File "./swebench_9_15/testbed/sympy/__init__.py", line 21, in <module>
    raise ImportError("SymPy now depends on mpmath as an external library. "
ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
[RAW line 79 TOOL Bash]
python ./swebench_9_15/testbed/test_issue.py
[RAW line 80 TOOL RESULT toolu_01N56AnA3ZsifPBZufbkf31k]
Exit code 1
Traceback (most recent call last):
  File "./swebench_9_15/testbed/test_issue.py", line 5, in <module>
    from sympy import Mod, Symbol, S
  File "./swebench_9_15/testbed/sympy/__init__.py", line 21, in <module>
    raise ImportError("SymPy now depends on mpmath as an external library. "
ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
[RAW line 82 TOOL Bash]
python test_issue.py
[RAW line 83 TOOL RESULT toolu_01GNE6SVDWQdfertLTK5GBHQ]
Exit code 1
Traceback (most recent call last):
  File "test_issue.py", line 5, in <module>
    from sympy import Mod, Symbol, S
  File "./swebench_9_15/testbed/sympy/__init__.py", line 21, in <module>
    raise ImportError("SymPy now depends on mpmath as an external library. "
ImportError: SymPy now depends on mpmath as an external library. See http://docs.sympy.org/latest/install.html#mpmath for more information.
[RAW line 85 TOOL Bash]
cd /tmp && python3 ./swebench_9_15/testbed/test_issue.py
[RAW line 86 TOOL RESULT toolu_01GpJcfxc9dZRXpgwDc7yJHb]
============================================================
Testing sympy__sympy-13177: Mod(x**2, x) fix
============================================================
Mod(x**2, x) = x*Mod(x, 1)
PASS: Mod(x**2, x) correctly NOT simplified to 0 for symbolic x

For x = 1.5:
Mod(1.5**2, 1.5) = Mod(2.25000000000000, 1.50000000000000) = 0.750000000000000
Expected: 0.750000000000000
PASS: Correct result for x=1.5

For integer x:
Mod(x**2, x) where x is integer = 0
PASS: Mod(x**2, x) correctly simplified to 0 for integer x

For x = 3:
Mod(3**2, 3) = Mod(9, 3) = 0
PASS: Mod(9, 3) correctly simplified to 0

============================================================
ALL TESTS PASSED!
============================================================
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
./swebench_9_15/testbed/sympy/core/basic.py:3: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.9 it will stop working
  from collections import Mapping, defaultdict
./swebench_9_15/testbed/sympy/solvers/diophantine.py:3188: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if feasible is 1:  # it's prime and k == 2
./swebench_9_15/testbed/sympy/plotting/plot.py:28: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.9 it will stop working
  from collections import Callable
Shell cwd was reset to ./swebench_9_15
[RAW line 100 TOOL Bash]
git -C ./swebench_9_15/testbed reset test_issue.py
[RAW line 112 TOOL Bash]
cd /tmp && python3 -c "from sympy import Mod, Symbol, S; x = Symbol('x'); print('Mod(x**2, x) =', Mod(x**2, x)); x = S(1.5); print('Mod(1.5**2, 1.5) =', Mod(x**2, x))"
[RAW line 113 TOOL RESULT toolu_01G9achMgW8VNUhLrHc9WpiR]
Mod(x**2, x) = x*Mod(x, 1)
Mod(1.5**2, 1.5) = 0.750000000000000
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
./swebench_9_15/testbed/sympy/core/basic.py:3: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.9 it will stop working
  from collections import Mapping, defaultdict
./swebench_9_15/testbed/sympy/plotting/plot.py:28: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.9 it will stop working
  from collections import Callable
Shell cwd was reset to ./swebench_9_15
